--- a/textosylistas/index.html
+++ b/textosylistas/index.html
@@ -12,6 +12,36 @@
     La <em>tecnología</em> es <span>xupi.</span>
     <strong>Texto</strong> con palabra en <span class="negrita"> negrita.</span>
     <p>Mi primo es pequeño. <small>(Depende de con quien lo compare)</small></p>
-    El nano es un gigante en <span class="pequenia">un cuerpo de mortal </span
-</body>
+    El nano es un gigante en <span class="pequenia">un cuerpo de mortal </span>
+    <h3>Lista ordenada</h3>
+    <ol>
+        <li>Matematicas</li>
+        <li>Química</li>
+        <li>Física</li>
+        <li>Tecnología idustrial</li>
+        <li>TICO</li>
+    </ol>
+    <h2>Lista no ordenada</h2>
+<ul>
+    <li>Chorizo</li>
+    <li>Queso</li>
+    <li>Patatas</li>
+    <li>Zanahorias</li>
+    <li>Cebolla</li>
+    <h1>Lista de términos</h1>
+    <dl>
+        <dt>HTML</dt>
+        <dd>lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia del software que conecta con la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código HTML) para la definición de contenido de una página web, como texto, imágenes, videos, juegos, entre otros.</dd>
+
+        <dt>CSS</dt>
+        <dd> lenguaje de diseño gráfico para definir y crear la presentación de un documento estructurado escrito en un lenguaje de marcado</dd>
+
+        <dt>JAVASCRIPT</dt>
+        <dd> orientado a objetos,​ basado en prototipos, imperativo, débilmente tipado y dinámico.</dd>
+
+    </dl>
+</ul>
+
+
+</body>        
 </html>
