--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prácticas de clase/casa Miguel Ángel DCV (TICO II)</title>
+    <title>Prácticas de clase/casa Erika Ortiz (TICO II)</title>
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-    <h1>Prácticas de clase/casa Miguel Ángel DCV (TICO II)</h1>
+    <h1>Prácticas de clase/casa Erika Ortiz (TICO II)</h1>
     <h2>Prácticas de clase</h2>
     <ul>
         <li> <a href="paginabasica/estilos.css" target="_blank">1- página Básica</a> </li>
